--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,13 @@
 [tool.poetry]
 name = "useragent"
-version = "0.1.0"
-description = ""
+version = "0.1.1"
+description = "User Agent parsing and creation"
 authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pyhumps = "^1.6.1"
-pydantic = "^1.8.1"
-addict = "^2.4.0"
+parse = "^1.19.0"
+enumb = {git = "https://github.com/tombulled/enumb.git", rev = "main"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
